Ensure headings are still visible when scrolling to them

--- a/static/src/scss/_content.scss
+++ b/static/src/scss/_content.scss
@@ -8,6 +8,7 @@ section.content {
   h5,
   h6 {
     .heading-anchor {
+      scroll-margin-top: 160px;  // navbar height (ish)
       margin-right: 0.5rem;
     }
   }
